# kvsd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  cliff.toml  config.yaml  flake.nix  justfile  taplo.toml
.cargo/: audit.toml
.github/workflows/: ci.yaml
benches/: kvsd_benchmark.rs
files/: config.yaml  gen.sh  localhost.key  localhost.pem
src/: lib.rs
src/cli/: delete.rs  echo.rs  get.rs  mod.rs  ping.rs  root.rs  server.rs  set.rs
src/cli/admin/: dump.rs  mod.rs
src/cli/admin/table/: dump.rs  mod.rs
src/client/: mod.rs  tcp.rs
src/config/: config.rs  initialize.rs  mod.rs
src/core/: config.rs  kvs.rs  kvsd.rs  mod.rs  request.rs  uow.rs
src/core/middleware/: authenticator.rs  authorizer.rs  chain.rs  dispatcher.rs  logger.rs  middleware.rs  mod.rs
src/core/principal/: mod.rs  user.rs
src/core/store/table/: entry.rs  index.rs  mod.rs
src/core/table/: dump.rs  entry.rs  index.rs  mod.rs  table.rs
src/core/uow/: delete.rs  get.rs  set.rs
src/error/: internal.rs  mod.rs
src/protocol/: command.rs  mod.rs
src/protocol/command/: mod.rs  set.rs
src/protocol/connection/: mod.rs
src/protocol/message/: authentication.rs  delete.rs  fail.rs  frame.rs  get.rs  message.rs  mod.rs  parse.rs  ping.rs  set.rs  success.rs
src/repository/: config.rs  mod.rs  repository.rs
src/repository/store/: table.rs
src/repository/store/table/: entry.rs  handler.rs  index.rs
src/server/: mod.rs  tcp.rs
tests/: integration_test.rs
tests/common/: mod.rs
