[package]
name = "kvsd"
version = "0.1.3"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple key value store"
repository = "https://github.com/ymgyt/kvsd"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["tracing-subscriber"]

[dependencies]
tokio = { version = "1.35", features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "net",
  "signal",
  "fs",
  "sync",
  "macros",
  "time",
] }
tokio-rustls = { version = "0.25.0" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true, features = [
  "chrono",
  "env-filter",
] }
tracing-futures = "0.2.4"
async-trait = "0.1.41"
bytes = "1.0.1"
chrono = "0.4.34"
backtrace = "0.3.53"
crc32fast = "1.2.1"
num_cpus = "1.13.0"
clap = { version = "4", features = ["env"] }
atoi = "0.3.3"
serde_yaml = "0.8.14"
serde = { version = "1.0.117", features = ["derive"] }
rand = "0.8"
# to avoid yanked deps
iana-time-zone = "0.1.60"
rustls-pemfile = "2.1.0"

[dev-dependencies]
tokio-test = "0.4.2"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "kvsd_benchmark"
harness = false

[package.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "chore: release"

pre-release-replacements = [
  { file = "CHANGELOG.md", search = "\\[unreleased\\]", replace = "[{{version}}] {{date}}", min = 1 },
]

tag-message = "chore: release {{crate_name}} version {{version}}"
