[package]
authors     = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
description = "Simple key value store"
edition     = "2021"
license     = "MIT"
name        = "kvsd"
readme      = "README.md"
repository  = "https://github.com/ymgyt/kvsd"
version     = "0.1.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli     = ["tracing-subscriber"]
default = ["cli"]

[dependencies]
async-trait        = "0.1.41"
atoi               = "0.3.3"
backtrace          = "0.3.53"
bytes              = "1.0.1"
chrono             = "0.4.34"
clap               = { version = "4", features = ["env", "derive", "wrap_help", "env", "std", "color", "suggestions"] }
crc32fast          = "1.2.1"
num_cpus           = "1.13.0"
rand               = "0.8"
serde              = { version = "1.0.117", features = ["derive"] }
serde_yaml         = "0.8.14"
tokio              = { version = "1.35", features = ["rt", "rt-multi-thread", "io-util", "net", "signal", "fs", "sync", "macros", "time"] }
tokio-rustls       = { version = "0.25.0" }
tracing            = "0.1.40"
tracing-futures    = "0.2.4"
tracing-subscriber = { version = "0.3.18", optional = true, features = ["chrono", "env-filter"] }
# to avoid yanked deps
iana-time-zone = "0.1.60"
rustls-pemfile = "2.1.0"

[dev-dependencies]
criterion  = "0.5"
tempfile   = "3"
tokio-test = "0.4.2"

[[bench]]
harness = false
name    = "kvsd_benchmark"

[package.metadata.release]
allow-branch               = ["main"]
pre-release-commit-message = "chore: release"

pre-release-replacements = [{ file = "CHANGELOG.md", search = "\\[unreleased\\]", replace = "[{{version}}] {{date}}", min = 1 }]

tag-message = "chore: release {{crate_name}} version {{version}}"
